change paths.get to path.of