@@ -6,7 +6,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
@@ -115,7 +114,7 @@ public class CAYWResource {
     private BibDatabaseContext getBibDatabaseContext(String libraryPath) throws IOException {
         InputStream libraryStream;
         if (libraryPath != null && !libraryPath.isEmpty()) {
-            libraryStream = Files.newInputStream(Paths.get(libraryPath));
+            libraryStream = Files.newInputStream(java.nio.file.Path.of(libraryPath));
         } else {
             // TODO: Add a way to use latest opened library as the default library
             libraryStream = getChocolateBibAsStream();
